--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lindman</title>
-    <link rel="icon" href="public/assets/favicon.png" />
+    <link rel="icon" href="public/assets/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
